Fix filter component growing larger on smaller screens
Now, we support screens downto 190px in width. I don't know whether I care
to try and support anything smaller...

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,12 @@
     @media not print {
       padding-top: 5rem;
     }
+
+    /* Fix for Tiny Screens (Issue #34) */
+    @media screen and (max-width: 25rem) {
+      padding: 1.2rem;
+      padding-top: 7rem;
+    }
   }
 
   /* Margins */
